# the-great-analysis-challenge

./: .dockerignore  .env  .gitignore  AGENTS.md  AI_ALGORITHM_SPEC.md  CHESS_ENGINE_SPECS.md  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  ERROR_ANALYSIS_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_STATISTICS_README.md  Makefile  QUARANTINE_SUMMARY.md  README.md  README_IMPLEMENTATION_GUIDELINES.md  ai_output.txt  board_output.txt  bug-patterns.md  build-local.sh  build_website.py  check_features.py  check_statistics_freshness.py  demo-error-analysis.sh  docker-compose.yml  docker_test_comprehensive.sh  docker_test_offline.sh  fen_output.txt  help_output.txt  language_statistics.yaml  llms.txt  package.json  perft_output.txt  run_tests_docker.sh  test_harness.py  test_local.sh  test_suite.json  test_summary.md  tsconfig.json  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md  WORKFLOWS.md  copilot-instructions.md  test-triage.py  test-workflow-locally.sh
benchmark_reports/: benchmark_output_crystal.txt  benchmark_output_dart.txt  benchmark_output_gleam.txt  benchmark_output_go.txt  benchmark_output_julia.txt  benchmark_output_kotlin.txt  benchmark_output_nim.txt  benchmark_output_python.txt  benchmark_output_ruby.txt  benchmark_output_rust.txt  benchmark_output_typescript.txt  benchmark_output_zig.txt  performance_data_crystal.json  (+26 more)
go/: go.mod  (+1 more)
haskell/: chess  chess.cabal
haskell/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/src/: Board.hs  FEN.hs  MoveGenerator.hs
(+989 files in other folders)
