cabal-version: 2.0
name: chess
version: 1.0.0.0
author: Haskell Implementation
maintainer: example@example.com
build-type: Simple

executable chess
  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
    Types,
    Board,
    FEN,
    MoveGenerator,
    AI,
    Perft
  default-language: Haskell2010
  ghc-options: -Wall -O2
  build-depends:
    base >= 4.7 && < 5,
    containers,
    array,
    time